<resources>
    <string name="app_name">Mausamm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feels_like">Feels like %s°</string>
    <string name="temperature">%s° C</string>
    <string name="details">more\ndetails…</string>
    <string name="this_is_a_search_icon">This is a search Icon</string>
    <string name="this_is_a_menu_icon">This is a menu Icon</string>
    <string name="today_s_hourly_forecast">Today\'s hourly weather forecast</string>
    <string name="_7_day_forecast">7 day weather forecast</string>
    <string name="weather_image">weather Image</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity_image">humidity image</string>
    <string name="pressureValue">%s mb</string>
    <string name="visibilityValue">%s km</string>
    <string name="windSpeedValue">%s km/h</string>
    <string name="city_name">City Name</string>
    <string name="search">Search</string>
    <string name="upArrow">↑</string>
    <string name="downArrow">↓</string>
    <string name="priyanshu_paliwal">Priyanshu Paliwal</string>
    <string name="please_type_or_spell_city_name_using_the_mic">Please type or Spell City name using the mic</string>
    <string name="imagebutton">Imagebutton</string>
    <string name="developed_by_priyanshu_paliwal">Developed with ❤ by Priyanshu Paliwal</string>
    <string name="try_again">Try Again</string>
    <string name="whoops">Whoops</string>
    <string name="slow_or_no_internet_connection">Slow or no internet connection</string>
    <string name="please_check_your_internet_settings_and_try_again">Please check your internet settings and try again</string>
    <string name="no_internet_image">no internet image</string>
</resources>