<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/blueGrey"
        app:cardCornerRadius="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/weekLyWeatherImage"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menu"
                android:contentDescription="@string/weather_image" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/details"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

            <TextView
                android:id="@+id/weeklyWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/maxTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                    <TextView
                        android:id="@+id/upArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upArrow"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/minTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                    <TextView
                        android:id="@+id/downArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downArrow"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>